[gd_scene load_steps=3 format=3 uid="uid://8ejkkjnb03sc"]

[ext_resource type="Script" path="res://CreateSave/create_save.gd" id="1_bikef"]

[sub_resource type="SystemFont" id="SystemFont_sbyhk"]

[node name="CreateSave" type="Node2D"]
script = ExtResource("1_bikef")

[node name="CreateSaveLabel" type="Label" parent="."]
offset_left = 524.0
offset_top = 171.0
offset_right = 691.0
offset_bottom = 202.0
theme_override_fonts/font = SubResource("SystemFont_sbyhk")
text = "CREATE NEW PROFILE"

[node name="Age" type="Label" parent="."]
offset_left = 385.0
offset_top = 292.0
offset_right = 430.0
offset_bottom = 327.0
theme_override_fonts/font = SubResource("SystemFont_sbyhk")
text = "Age"

[node name="Age Input" type="LineEdit" parent="Age"]
layout_mode = 0
offset_left = 60.0
offset_top = -2.0
offset_right = 407.0
offset_bottom = 31.0

[node name="Name" type="Label" parent="."]
offset_left = 383.0
offset_top = 235.0
offset_right = 439.0
offset_bottom = 270.0
theme_override_fonts/font = SubResource("SystemFont_sbyhk")
text = "Name"

[node name="Name Input" type="LineEdit" parent="Name"]
layout_mode = 0
offset_left = 64.0
offset_top = -2.0
offset_right = 411.0
offset_bottom = 31.0

[node name="PlayTutorialButton" type="Button" parent="."]
offset_left = 461.0
offset_top = 350.0
offset_right = 605.0
offset_bottom = 385.0
text = "PLAY TUTORIAL"

[node name="LevelSelect1Button" type="Button" parent="."]
offset_left = 642.0
offset_top = 353.0
offset_right = 763.0
offset_bottom = 387.0
text = " LEVEL SELECT
"

[node name="Button" type="Button" parent="."]
offset_left = 21.0
offset_top = 4.0
offset_right = 49.0
offset_bottom = 35.0
text = "<<
"

[connection signal="focus_entered" from="PlayTutorialButton" to="." method="_on_play_tutorial_button_focus_entered"]
[connection signal="pressed" from="PlayTutorialButton" to="." method="_on_play_tutorial_button_pressed"]
[connection signal="pressed" from="LevelSelect1Button" to="." method="_on_level_select_1_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
